--- a/app/templates/base.jinja2
+++ b/app/templates/base.jinja2
@@ -1,27 +1,31 @@
 <html>
+
 <head>
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/layouts.css') }}">
-{% block head %} {% endblock head %} 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/argent.css') }}">
+    {% block head %} {% endblock head %}
 </head>
 
-<body>
-<div class="site-branding" img="{{ url_for('static', filename='images/cropped-SH_Title_sm-scaled-1.jpg') }}"> 
+<body class="home page-template-default page page-id-6 without-featured-image">
+    <div class='main-navigation'>
+        <ul class="menu nav-menu">
+            <li><a href="{{ url_for('home') }}">HOME</a></li>
+            <li><a id="syntax" href="{{ url_for('syntax') }}">Syntax Highlighting</a></li>
+            <li><a id="writings" href="{{ url_for('writings') }}">WRITINGS</a></li>
+            <li><a id="helpers" href="{{ url_for('helpers') }}">HELPERS</a></li>
+            <li><a id="learning_paths" href="{{ url_for('learning_paths') }}">LEARNING PATHS</a></li>
+            <li><a id="contact" href="{{ url_for('contact') }}">CONTACT</a></li>
+        </ul>
+    </div>
+    <div class="site-branding" img="{{ url_for('static', filename='images/cropped-SH_Title_sm-scaled-1.jpg') }}">
+        <h1 style="padding: 10px; border: 10px solid grey; margin=30px; display:inline; color:grey">SARAVJI'S HUT</h1>
+    </div>
 
-
-
-    <nav>
-        {# <a id="all" href="{{ url_for('all_tasks') }}">All tasks</a>
-        <a id="create" href="{{ url_for('create') }}">Create a task</a>
-        <a id="incomplete" href="{{ url_for('incomplete_tasks') }}">Incomplete tasks</a> #}
-    </nav>
-   
-    <h1 style="padding: 10px; border: 10px solid grey; margin=30px; display:inline; color:grey">SARAVJI'S HUT</h1>
-
-</div>
-
-    <h2>{% block subtitle %} {% endblock subtitle %}</h2>
-
+    {% block subtitle %} {% endblock subtitle %}
 
     {% block content %} {% endblock content %}
+
+    {% block footer %} {% endblock footer %}
+
 </body>
+
 </html>
