Collapsible menu added to navigation bar for narrow display

--- a/app/templates/main.jinja2
+++ b/app/templates/main.jinja2
@@ -5,9 +5,14 @@
 
 {% block content %}
 
+<body>
+
+
+<br>
 <header class="page-header">
 <h1 class="page-title">Saravji’s Hut</h1>
 </header>
+
 
 <div class="page-content">
 
@@ -25,18 +30,20 @@
 <li>Focused on the instructor.</li>
 <li>An attempt to replace primary income.</li>
 </ul>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/ZsVED9jf21U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
 <h2>How you can contribute:</h2>
 <ul>
-<li>spread the word</li>
-<li>subscribe to the YouTube Channel</li>
-<li>follow on twitter to receive notifications about new uploads and other related news</li>
+<li>Spread the word</li>
+<li><a href="https://www.youtube.com/channel/UCbHQVBE_i-4FlJUcU7Inl-g?sub_confirmation=1">Subscribe to the YouTube Channel</a></li>
+<li><a href="https://twitter.com/intent/follow?screen_name=Saravji">Follow on Twitter</a> to receive notifications about new uploads and other related news</li>
 <li>give constructive feedback</li>
 </ul>
 <h2>Available Materials</h2>
 <ul>
-<li>Foundations of Programming (Python) Learning Path</li>
-<li>Collection of Dev Ops Nuggets</li>
-<li>Feature Selection and Feature Engineering Educational Talk</li>
+<li><a href="https://github.com/Saravji/saravjis_hut/blob/master/FDN_Prog/README.md">Foundations of Programming (Python)</a> - Learning Path</li>
+<li><a href="https://github.com/Saravji/saravjis_hut/blob/master/dev_ops/README.md">Collection of Dev Ops Nuggets</a></li>
+<li><a href="https://github.com/Saravji/saravjis_hut/blob/master/DS_ML/FS_FE/README.md">Feature Selection and Feature Engineering</a> - Educational Talk</li>
 </ul>
 <h2>Materials in Development</h2>
 <ul>
@@ -74,4 +81,5 @@ Effectively, I cannot prevent anyone from pirating or using my works in a way di
 However, I ask to consider that the materials made available constitute a significant investment. If it would be your efforts / time / monetary contributions, would you not appreciate if folks would show ethical behavior?
 So, why not support and respect the rights?
 
+</body
 {% endblock content %}
