--- a/app/templates/base.jinja2
+++ b/app/templates/base.jinja2
@@ -1,31 +1,47 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/argent.css') }}">
+        <link rel="stylesheet" id="genericons-css" href="{{ url_for('static',filename='styles/genericons.css') }}" type="text/css" media="all">
+        
+        {% block head %} {% endblock head %}
 
-<head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/argent.css') }}">
-    {% block head %} {% endblock head %}
-</head>
+    </head>
 
-<body class="home page-template-default page page-id-6 without-featured-image">
-    <div class='main-navigation'>
-        <ul class="menu nav-menu">
-            <li><a href="{{ url_for('home') }}">HOME</a></li>
-            <li><a id="syntax" href="{{ url_for('syntax') }}">Syntax Highlighting</a></li>
-            <li><a id="writings" href="{{ url_for('writings') }}">WRITINGS</a></li>
-            <li><a id="helpers" href="{{ url_for('helpers') }}">HELPERS</a></li>
-            <li><a id="learning_paths" href="{{ url_for('learning_paths') }}">LEARNING PATHS</a></li>
-            <li><a id="contact" href="{{ url_for('contact') }}">CONTACT</a></li>
-        </ul>
-    </div>
-    <div class="site-branding" img="{{ url_for('static', filename='images/cropped-SH_Title_sm-scaled-1.jpg') }}">
-        <h1 style="padding: 10px; border: 10px solid grey; margin=30px; display:inline; color:grey">SARAVJI'S HUT</h1>
-    </div>
+    <body class="home page-template-default page page-id-6 without-featured-image">
+        <div id="page" class="hfeed site">
+            <a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
-    {% block subtitle %} {% endblock subtitle %}
+            <header id="masthead" class="site-header" role="banner">
 
-    {% block content %} {% endblock content %}
+                <nav id="site-navigation" class="main-navigation" role="navigation">
+                    <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false">Menu</button>
+                    <div class="menu-primary-menu-container">
+                        <ul id="primary-menu" class="menu nav-menu" aria-expanded="false">
 
-    {% block footer %} {% endblock footer %}
+                            <li><a href="{{ url_for('home') }}">HOME</a></li>
+                            <li><a id="syntax" href="{{ url_for('syntax') }}">Syntax Highlighting</a></li>
+                            <li><a id="writings" href="{{ url_for('writings') }}">WRITINGS</a></li>
+                            <li><a id="helpers" href="{{ url_for('helpers') }}">HELPERS</a></li>
+                            <li><a id="learning_paths" href="{{ url_for('learning_paths') }}">LEARNING PATHS</a></li>
+                            <li><a id="contact" href="{{ url_for('contact') }}">CONTACT</a></li>
 
-</body>
+                        </ul>
+                    </div>
+                </nav>
 
+                <div class="site-branding" img="{{ url_for('static', filename='images/cropped-SH_Title_sm-scaled-1.jpg') }}">
+                    <h1 style="padding: 10px; border: 10px solid grey; margin=30px; display:inline; color:grey">SARAVJI'S HUT</h1>
+                </div>
+
+                <script type="text/javascript" src="static/js/navigation.js" id="argent-navigation-js"></script>
+
+                {% block subtitle %} {% endblock subtitle %}
+
+                {% block content %} {% endblock content %}
+
+                {% block footer %} {% endblock footer %}
+
+            </body>
+        </div>
+    </body>
 </html>
