--- a/app/templates/syntax_highlighting.jinja2
+++ b/app/templates/syntax_highlighting.jinja2
@@ -1,7 +1,9 @@
 {% extends 'base.jinja2' %}
 
 {% block head %}
+
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/pygments.css') }}">
+
 {% endblock head %}
 
 {% block content %}
@@ -9,7 +11,8 @@
     <form method="POST">
         <div class="site-main">
             <p>
-                <input type="submit" value="Highlight" name="submit_button"><br>
+                <input type="submit" value="Highlight" name="submit_button">
+                <br>
                 <select name="colour" method="GET" action="/">
                     {% for lexer in all_lexers %}
                     <option value="{{lexer}}">{{lexer}}</option>
@@ -22,14 +25,18 @@
         </div>
     </form>
 </div>
+
 <div class="syntax-highlight">
     {{ user_input | safe }}
 </div>
+
 {% endblock content %}
 
 {% block footer %}
+
 <footer>
     <br>
     Page created by Douglas Klos with Pygments library.
 </footer>
+
 {% endblock footer %}
