--- a/app/templates/writings.jinja2
+++ b/app/templates/writings.jinja2
@@ -1,31 +1,34 @@
 {% extends 'base.jinja2' %}
 
-{% block head %} {% endblock head %}
+{% block head %} {% endblock head %} 
 
 {% block content %}
+<br>
 <div class="page-content">
-	<article id="post-79" class="post-79 post type-post status-publish format-standard hentry category-uncategorized">
-		<header class="entry-header">
-			<h1 class="entry-title"><a href="https://saravjishut.org/2021/10/06/a-creed-for-ai-and-ml-practitioners/"
-					rel="bookmark">A Creed for AI and ML Practitioners</a></h1>
-			<div class="entry-meta">
-				<span class="posted-on">Posted on <a
-						href="https://saravjishut.org/2021/10/06/a-creed-for-ai-and-ml-practitioners/"
-						rel="bookmark"><time class="entry-date published"
-							datetime="2021-10-06T02:32:26+00:00">2021-10-06</time><time class="updated"
-							datetime="2021-10-06T02:33:41+00:00">2021-10-06</time></a></span><span class="byline"> by
-					<span class="author vcard"><a class="url fn n"
-							href="https://saravjishut.org/author/saravji/">Saravji</a></span></span> </div>
-			<!-- .entry-meta -->
-		</header>
-		<div class="entry-content">
-			<p>Several mentions of an ethical code of conduct or oath for Artificial Intelligence (AI) or Machine
-				Learning (ML) practitioners have… <a class="read-more"
-					href="https://saravjishut.org/2021/10/06/a-creed-for-ai-and-ml-practitioners/">Read more <span
-						class="screen-reader-text">A Creed for AI and ML Practitioners</span></a></p>
-
-		</div>
-	</article>
+    <article id="post-79" class="post-79 post type-post status-publish format-standard hentry category-uncategorized">
+        <header class="entry-header">
+            <h1 class="entry-title">
+                <a href="https://saravjishut.org/2021/10/06/a-creed-for-ai-and-ml-practitioners/" rel="bookmark">A Creed for AI and ML Practitioners</a>
+            </h1>
+            <div class="entry-meta">
+                <span class="posted-on">Posted on <a href="https://saravjishut.org/2021/10/06/a-creed-for-ai-and-ml-practitioners/" rel="bookmark">
+					<time class="entry-date published" datetime="2021-10-06T02:32:26+00:00">2021-10-06</time>
+					<time class="updated" datetime="2021-10-06T02:33:41+00:00">2021-10-06</time>
+					</a>
+				</span>
+                <span class="byline"> by
+					<span class="author vcard">
+						<a class="url fn n" href="https://saravjishut.org/author/saravji/">Saravji</a>\
+					</span>
+                </span>
+            </div>
+            <!-- .entry-meta -->
+        </header>
+        <div class="entry-content">
+            <p>Several mentions of an ethical code of conduct or oath for Artificial Intelligence (AI) or Machine Learning (ML) practitioners have… <a class="read-more" href="https://saravjishut.org/2021/10/06/a-creed-for-ai-and-ml-practitioners/">Read more
+				 <span class="screen-reader-text">A Creed for AI and ML Practitioners</span></a></p>
+        </div>
+    </article>
 
 
 </div>
